...
                    Spacer()
                }else {
                    ConfirmOrders()
                    Spacer()
                }
            }
            .navigationTitle("Order")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing){
                    Button {
                        showAddOrderView.toggle()
                    } label :{
                        Label("Add Food", systemImage: "plus.circle")
                            .foregroundColor(CustomColor.darkPink)
                    }
                }
            }
                .sheet(isPresented: $showAddOrderView) {
                    AddOrderPage()
...
