...
                }
                .padding(.leading)
                .padding(.trailing)
                
                //For Search
                HStack{
                    TextField("Search..", text: $searchKey)
                        .onChange(of: searchKey) { newValue in
                            onSearch(key : searchKey)
                                    }
                        .padding(10)
                        .border(CustomColor.litePink, width: 4)
                        .cornerRadius(6)
...
