...
//                HStack{
//                    Spacer()
//                    Button(action: {
//                        showNextView = true
//                    }){
//                        HStack{
//                            Text("Get Start")
//                                .font(.title3)
//                                .bold()
//                                .foregroundColor(.white)
//                            Spacer()
//                            Image(systemName: "arrow.forward.circle.fill")
//                                .font(.title3)
...
